--- a/Caddyfile
+++ b/Caddyfile
@@ -1,28 +1,41 @@
 {
-        admin 0.0.0.0:2019
+	admin 0.0.0.0:2019
+	# ---------- L4: native MQTT/TLS on :8883 ---------- 
+	layer4 {
+		:8883 {
+			route {
+				tls
+				proxy {
+					upstream mqtt5:1883
+				}
+			}
+		}
+	}
 }
 
 *.cerberalarms.com {
-        tls {
-                dns cloudflare {env.CF_API_TOKEN}
-                propagation_delay 2m
-                resolvers 1.1.1.1
-        }
+	tls {
+		key_type rsa2048
+		issuer acme {
+			dns cloudflare {env.CF_API_TOKEN}
+			propagation_delay 2m
+			resolvers 1.1.1.1
+		}
+	}
 
-        @caddy host caddy.{$DOMAIN}
-        handle @caddy {
-                root * /usr/share/caddy
-                php_fastcgi localhost:80
-                file_server
-        }
+	@caddy host caddy.{$DOMAIN}
+	handle @caddy {
+		root * /usr/share/caddy
+		file_server
+	}
 
-        @api host api.{$DOMAIN}
-        handle @api {
-            reverse_proxy express-backend:3000
-        }
+	@api host api.{$DOMAIN}
+	handle @api {
+		reverse_proxy http://express-backend:3000
+	}
 
-        @mqtt host mqtt.{$DOMAIN}
-        handle @mqtt {
-            reverse_proxy mqtt5:9001
-        }
+	@mqttws host mqtt.{$DOMAIN}
+	handle @mqttws {
+		reverse_proxy http://mqtt5:9001 
+	}
 }
